--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ h3 {
   padding: 4rem 1rem;
   text-align: center;
   margin-bottom: 2rem;
-    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../hero-bg.jpg');
+      background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./hero-bg.jpg');
   background-size: cover;
   background-position: center;
   color: #fff;
